Opened 15 years ago
Closed 15 years ago
#425 closed defect (fixed)
cannot compile ffmpeg.c when disable avfilter
| Reported by: | Ching Yi, Chan | Owned by: | Michael Niedermayer |
|---|---|---|---|
| Priority: | normal | Component: | ffmpeg |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
I try to compile the latest source code from git master by
./configure --disable-doc --disable-ffplay \ --disable-ffserver --disable-muxers --disable-avdevice \ --disable-postproc --disable-avfilter --disable-bsfs \ --disable-filters --disable-devices \ --disable-encoders --disable-asm \ --disable-bzlib \ --disable-zlib \ --prefix=/opt/ffmpeg
when ffmpeg.c compiling, it raises the error:
CC ffmpeg.o ffmpeg.c: In function ‘do_video_resample’: ffmpeg.c:1099: error: ‘enc’ undeclared (first use in this function) ffmpeg.c:1099: error: (Each undeclared identifier is reported only once ffmpeg.c:1099: error: for each function it appears in.) ffmpeg.c:1126: warning: passing argument 2 of ‘sws_scale’ from incompatible pointer type ffmpeg.c: In function ‘init_input_stream’: ffmpeg.c:1886: warning: unused variable ‘i’ ffmpeg.c: In function ‘transcode’: ffmpeg.c:2336: error: ‘OutputStream’ has no member named ‘graph’ ffmpeg.c:2338: warning: implicit declaration of function ‘avfilter_graph_send_command’ ffmpeg.c:2338: error: ‘OutputStream’ has no member named ‘graph’ ffmpeg.c:2341: warning: implicit declaration of function ‘avfilter_graph_queue_command’ ffmpeg.c:2341: error: ‘OutputStream’ has no member named ‘graph’ ffmpeg.c: In function ‘opt_input_file’: ffmpeg.c:3166: warning: ‘loop_input’ is deprecated (declared at libavformat/avformat.h:795) ffmpeg.c: In function ‘opt_output_file’: ffmpeg.c:3789: warning: ‘loop_output’ is deprecated (declared at libavformat/avformat.h:771) make: *** [ffmpeg.o] Error 1
the revision is 3584b01e4e63cd9d05b82dee4859da5d463fb8e2
Note:
See TracTickets
for help on using tickets.



Should be fixed.