Fix compilation with --disable-avfilter.

Fixes ticket #425.